errorstack/tests/compile_fail/unit_variant.rs
use errorstack::ErrorStack;

#[derive(ErrorStack)]
enum Bad {
    Oops,
}

fn main() {}
